--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-node_modules
-\.idea/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -23,3 +21,4 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea
