--- a/bot/package.json
+++ b/bot/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "html-table-to-json": "^1.0.0",
     "mongoose": "^5.8.11",
-    "puppeteer": "^2.1.0"
+    "puppeteer": "^2.1.0",
+    "tabletojson": "^2.0.3"
   }
 }
